--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -2732,6 +2732,9 @@
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ob-xd-ckR">
                                                 <rect key="frame" x="0.0" y="0.0" width="354" height="70"/>
+                                                <connections>
+                                                    <segue destination="Ea4-C5-o3e" kind="presentation" identifier="customerOrdersSegue" id="Sjf-vO-BqE"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -3509,6 +3512,66 @@
             </objects>
             <point key="canvasLocation" x="3219" y="2373"/>
         </scene>
+        <!--CustomerOrdersViewController-->
+        <scene sceneID="bPX-R1-gzi">
+            <objects>
+                <viewController title="CustomerOrdersViewController" id="Ea4-C5-o3e" customClass="CustomerOrdersViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Utn-09-nog">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A7E-eJ-fm7" userLabel="Header">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Orders" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpp-2y-UwL">
+                                        <rect key="frame" x="167" y="59.666666666666664" width="80" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0O-wj-bic">
+                                        <rect key="frame" x="20" y="45" width="50" height="50"/>
+                                        <state key="normal" image="left_arrow_icon"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="Ea4-C5-o3e" eventType="touchUpInside" id="Sa6-9i-gHK"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstItem="m0O-wj-bic" firstAttribute="leading" secondItem="A7E-eJ-fm7" secondAttribute="leading" constant="20" id="5Is-bT-DtU"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rpp-2y-UwL" secondAttribute="bottom" constant="20" id="61x-H5-uvh"/>
+                                    <constraint firstAttribute="bottom" secondItem="m0O-wj-bic" secondAttribute="bottom" constant="5" id="Jg3-xK-I8L"/>
+                                    <constraint firstAttribute="height" constant="100" id="WPn-bS-jVm"/>
+                                    <constraint firstItem="Rpp-2y-UwL" firstAttribute="centerX" secondItem="A7E-eJ-fm7" secondAttribute="centerX" id="z7l-1c-veZ"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w4G-iP-HTX">
+                                <rect key="frame" x="0.0" y="94" width="413" height="680"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KNx-KZ-cf3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="A7E-eJ-fm7" firstAttribute="leading" secondItem="w4G-iP-HTX" secondAttribute="leading" id="4ZL-kh-ADo"/>
+                            <constraint firstItem="w4G-iP-HTX" firstAttribute="top" secondItem="A7E-eJ-fm7" secondAttribute="bottom" id="5mI-IJ-dHj"/>
+                            <constraint firstItem="KNx-KZ-cf3" firstAttribute="bottom" secondItem="w4G-iP-HTX" secondAttribute="bottom" id="GkJ-r1-uO0"/>
+                            <constraint firstItem="A7E-eJ-fm7" firstAttribute="leading" secondItem="KNx-KZ-cf3" secondAttribute="leading" id="UCt-vy-2Ua"/>
+                            <constraint firstItem="A7E-eJ-fm7" firstAttribute="top" secondItem="KNx-KZ-cf3" secondAttribute="top" id="ZUd-Bm-sfk"/>
+                            <constraint firstItem="A7E-eJ-fm7" firstAttribute="centerX" secondItem="w4G-iP-HTX" secondAttribute="centerX" id="dNE-IV-XpS"/>
+                            <constraint firstItem="A7E-eJ-fm7" firstAttribute="centerX" secondItem="Utn-09-nog" secondAttribute="centerX" id="tuE-bt-at2"/>
+                            <constraint firstItem="KNx-KZ-cf3" firstAttribute="top" secondItem="A7E-eJ-fm7" secondAttribute="top" id="vDR-5P-K9v"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="ordersTableView" destination="w4G-iP-HTX" id="dBm-VJ-DZL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fHo-BA-6rV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3215.9420289855075" y="3025.4464285714284"/>
+        </scene>
         <!--Vendor My Account View Controller-->
         <scene sceneID="F3r-2j-OZo">
             <objects>
@@ -3972,8 +4035,8 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="N4E-qe-Wyq"/>
-        <segue reference="NHr-zy-FFi"/>
+        <segue reference="CHd-uw-vgy"/>
+        <segue reference="SrW-kQ-x4p"/>
         <segue reference="Jgp-et-rMS"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -4010,16 +4073,13 @@
         <image name="right_arrow_blue" width="64" height="64"/>
         <image name="settings_icon" width="50" height="50"/>
         <image name="settings_icon_blue" width="50" height="50"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" width="13" height="13"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="scrollViewTexturedBackgroundColor">
-            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="scrollViewTexturedBackgroundColor">
             <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
