TableView for Orders created,necessary order cell implementation nearly completed

--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -4035,8 +4035,8 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="CHd-uw-vgy"/>
-        <segue reference="SrW-kQ-x4p"/>
+        <segue reference="N4E-qe-Wyq"/>
+        <segue reference="NHr-zy-FFi"/>
         <segue reference="Jgp-et-rMS"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
