--- a/Projects/Frontend/bazaar-frontend/src/screens/Messages/messages.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Messages/messages.scss
@@ -6,7 +6,6 @@
   padding-top: 5px;
   margin-bottom: 1rem;
   margin-top: 1rem;
-  font-weight: bold;
 }
 .user1{
   background-color: #A7A298;
@@ -15,4 +14,8 @@
 .user2{
   background-color: #e8ffff;
   margin-left: 10px;
+}
+
+.unread{
+  font-weight: bold;
 }
