--- a/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/checkout.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Cart/Checkout/checkout.scss
@@ -1,5 +1,136 @@
-.address-card-wrapper {
-  & :hover {
-    color: red;
+#full-address-field {
+  height: 100px;
+}
+
+.summary-block {
+  padding-left: 20px;
+  & .summary-card {
+
+    & .payment-info {
+      padding-top: 10px; 
+      padding-bottom: 10px;
+    }
+
+    & .payment-total {
+      padding-top: 10px;
+
+    }
+
+  }
+}
+
+
+.checkout-container {
+  max-width: 70rem;
+  padding-bottom: 80px;
+  align-content: center;
+  margin-left: 10%;
+  margin-right: 0;
+
+  & .order-selection {
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+
+    & .address-selection {
+      margin: auto;
+      align-content: center;
+      float: right;
+      display: flex;
+    }
+
+  }
+    
+  & #header3 {
+    margin-bottom: 50px;
+  }
+  & .address-cards-block {
+
+    padding: 0;
+
+    & .address-card-wrapper {
+      margin-left: 20px;
+      margin-bottom: 20px;
+      
+      & .add-new-address {
+        display: inline-flex;
+        padding-left: 20px;
+        padding-right: 20px;
+        
+        & .plus-sign {
+          margin: auto;
+        }
+  
+      }
+  
+      & :hover {
+        color: rgb(107, 99, 99);
+        cursor: pointer;
+      }
+    }
+  }
+  
+  & .header2 {
+    margin-bottom: 30px;
+    margin:auto;
+  }
+
+  & .credit-cards-block {
+    padding: 0;
+
+    & .credit-card-wrapper {
+      margin-left: 20px;
+      margin-bottom: 20px;
+
+      & .add-new-credit-card {
+        display: inline-flex;
+        padding-left: 20px;
+        padding-right: 20px;
+        
+        & .plus-sign {
+          margin: auto;
+        }
+  
+      }
+      & :hover {
+        color: rgb(107, 99, 99);
+        cursor: pointer;
+      }
+    }
+
+  }
+
+}
+.row-margin-correction {
+  margin-left: 0!important;
+}
+
+.needs-validation {
+
+  & .country-dropdown {
+    width: 200px!important;
+  }
+
+  & .city-dropdown {
+    width: 200px!important;
+  }
+
+  & .date-field {
+    max-width: 50px;
+    display: inline;
+  }
+  & .date-slash {
+    margin-left: 10px;
+    margin-right: 10px;
+
+  }
+  & .add-or-save {
+    border-color: #F4A133;
+    background-color: #F4A133;
+    color: black;
+      &:hover {
+        background-color: #f1ca1a;
+  
+        color: black;
+    }
   }
 }
