--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
@@ -5,83 +5,108 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="408" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="823" height="408"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="633" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="823" height="408"/>
+                <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sze-BO-Qa5" userLabel="Product Image View">
-                        <rect key="frame" x="34" y="32" width="175" height="154"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jKd-Yy-4lb" userLabel="Product Name-Brand Label">
-                        <rect key="frame" x="34" y="192" width="175" height="86"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IPG-bX-deS" userLabel="Price-Status Label">
-                        <rect key="frame" x="34" y="286" width="186" height="60"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9MX-Vo-G18" userLabel="Vendor Label">
-                        <rect key="frame" x="275" y="0.0" width="118" height="81"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xxj-AZ-t8T" userLabel="Date-Delivery Date Label">
-                        <rect key="frame" x="275" y="89" width="117" height="53"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wwX-Mm-iy0" userLabel="Amount Label">
-                        <rect key="frame" x="275" y="192" width="118" height="53"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillProportionally" alignment="top" spacing="77" translatesAutoresizingMaskIntoConstraints="NO" id="n2G-7F-rsT" userLabel="Text Stack View">
-                        <rect key="frame" x="275" y="33" width="118" height="48"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riY-r7-Kzk" userLabel="Adress Label">
-                        <rect key="frame" x="275" y="296" width="118" height="40"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mTe-uJ-ZVK">
+                        <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="852" translatesAutoresizingMaskIntoConstraints="NO" id="IQw-Ei-c0c">
+                                <rect key="frame" x="0.0" y="0.0" width="1524" height="123"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qQF-Zd-njM" userLabel="Left Stack">
+                                        <rect key="frame" x="0.0" y="0.0" width="630.5" height="123"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aYh-jl-fIE" userLabel="Product Image View">
+                                                <rect key="frame" x="0.0" y="0.0" width="630.5" height="82"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="uoq-XW-hLg" userLabel="Name-Brand Label">
+                                                <rect key="frame" x="0.0" y="82" width="630.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UwG-ug-UY2" userLabel="Price-Status Label">
+                                                <rect key="frame" x="0.0" y="102.5" width="630.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-te-qyz" userLabel="Right Stack">
+                                        <rect key="frame" x="1482.5" y="0.0" width="41.5" height="123"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3A-s4-Xi5" userLabel="Vendor Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HfK-3r-haA" userLabel="Amount Label">
+                                                <rect key="frame" x="0.0" y="20.5" width="41.5" height="61.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMS-LX-1W6" userLabel="Adress Label">
+                                                <rect key="frame" x="0.0" y="82" width="41.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KhF-4T-yEA" userLabel="Date-Delivery Date Label">
+                                                <rect key="frame" x="0.0" y="102.5" width="41.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="IQw-Ei-c0c" secondAttribute="trailing" id="BXw-Cy-UR1"/>
+                            <constraint firstAttribute="top" secondItem="IQw-Ei-c0c" secondAttribute="top" id="Kap-o1-jv1"/>
+                            <constraint firstAttribute="bottom" secondItem="IQw-Ei-c0c" secondAttribute="bottom" id="feG-zu-lHS"/>
+                            <constraint firstAttribute="leading" secondItem="IQw-Ei-c0c" secondAttribute="leading" id="o2s-8e-0Xv"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Bt2-b8-Yft"/>
+                    <constraint firstAttribute="top" secondItem="mTe-uJ-ZVK" secondAttribute="top" id="eow-ht-CSk"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="AdressLabel" destination="riY-r7-Kzk" id="x8L-Q3-V9I"/>
-                <outlet property="AmountLabel" destination="wwX-Mm-iy0" id="m9O-Fc-72d"/>
-                <outlet property="DatesLabel" destination="Xxj-AZ-t8T" id="ys0-mK-f0w"/>
-                <outlet property="Name_BrandLabel" destination="jKd-Yy-4lb" id="Xag-wq-8k7"/>
-                <outlet property="Price_StatusLabel" destination="IPG-bX-deS" id="amj-oA-9UO"/>
-                <outlet property="ProductImage" destination="Sze-BO-Qa5" id="1Kb-WO-7GP"/>
-                <outlet property="VendorLabel" destination="9MX-Vo-G18" id="kb4-LL-Abd"/>
+                <outlet property="AdressLabel" destination="zMS-LX-1W6" id="Ttw-ja-Chw"/>
+                <outlet property="AmountLabel" destination="HfK-3r-haA" id="tXH-0B-j2z"/>
+                <outlet property="DatesLabel" destination="KhF-4T-yEA" id="izJ-PK-MAw"/>
+                <outlet property="Name_BrandLabel" destination="uoq-XW-hLg" id="a2X-ix-JP4"/>
+                <outlet property="Price_StatusLabel" destination="UwG-ug-UY2" id="7Th-Ob-Ek6"/>
+                <outlet property="ProductImage" destination="aYh-jl-fIE" id="gtn-Ly-XhV"/>
+                <outlet property="VendorLabel" destination="i3A-s4-Xi5" id="aq9-RJ-tlY"/>
             </connections>
-            <point key="canvasLocation" x="407.97101449275368" y="52.232142857142854"/>
+            <point key="canvasLocation" x="915.94202898550736" y="127.56696428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
