--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -3546,7 +3546,7 @@
                                     <constraint firstItem="Rpp-2y-UwL" firstAttribute="centerX" secondItem="A7E-eJ-fm7" secondAttribute="centerX" id="z7l-1c-veZ"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w4G-iP-HTX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w4G-iP-HTX" userLabel="Orders Table View">
                                 <rect key="frame" x="0.0" y="94" width="413" height="680"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -3565,7 +3565,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ordersTableView" destination="w4G-iP-HTX" id="dBm-VJ-DZL"/>
+                        <outlet property="ordersTableView" destination="w4G-iP-HTX" id="gUO-hf-So8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHo-BA-6rV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
